--- a/WildCore/src/main/resources/config.yml
+++ b/WildCore/src/main/resources/config.yml
@@ -3,3 +3,7 @@
 #            WildCore             #
 #                                 #
 ###################################
+ip-adress: "localhost"
+user: "root"
+password: ""
+database: ""
