--- a/WildCore/pom.xml
+++ b/WildCore/pom.xml
@@ -48,7 +48,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.2.0</version>
                 <configuration>
-                    <outputDirectory>C:\Users\Matúš\Desktop\Codes\WildCraftTechnic\plugins</outputDirectory>
+                    <outputDirectory>C:\Users\Matúš\AppData\Roaming\Fork\servers\Meski Development\plugins</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
