--- a/WildCore/pom.xml
+++ b/WildCore/pom.xml
@@ -131,5 +131,12 @@
             <version>1.3.1</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.NuVotifier</groupId>
+            <artifactId>NuVotifier</artifactId>
+            <version>2.7.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
